--- a/prob1_2024/joint.html
+++ b/prob1_2024/joint.html
@@ -1263,9 +1263,9 @@ Also $V(X) = E(X-\mu)^2 = 0^2\times \frac{16}{18}+1^2\times \frac{2}{18} = \frac
 <p></p>
 So we are looking for $\delta$  such that $P(|X-\mu|\geq\delta) = \frac{1}{9\delta^2}.$
 <p></p>
-Now, for $\delta&gt;0,$  the LHS is either 0 or 1 (according as $\delta$  is $&gt; 1$  or not). 
+Now, for $\delta&gt;0,$  the LHS is either 0 or $\frac 19$ (according as $\delta$  is $&gt; 1$  or not). 
 <p></p>
-So $\delta=\frac 13$  makes both sides $1.$
+So $\delta=1$  makes both sides $\frac 19.$
 </div></p>
 
 </p>
