--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -176,6 +176,9 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
 </li>
+<li>
+<a href="#Problems for practice">Problems for practice</a>
+</li>
 </ul>
 <hr/>
 <h1><a
@@ -215,6 +218,75 @@ name="$F$  distribution">$F$  distribution</a></h3>
 name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h2>
 
 <p></p>
+
+<h1><a
+name="Problems for practice">Problems for practice</a></h1>
+
+<p>
+<b>EXERCISE 1:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
+ find $E(X)$  and $V(X)$  in terms of $a,b,c.$  Also find median of $X.$</p>
+
+<p>
+<b>EXERCISE 2:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
+and $Y$ have $N(0,1)$ distribution, but $(X,Y)$
+is not bivariate normal.</p>
+
+<p>
+<b>EXERCISE 3:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
+$\mu\in{\mathbb R}^n$  and  $\Sigma$  be any $n\times n$  PD matrix. Suggest how you can
+ use the software to generate a single observation from $N_n(\mu,\Sigma).$  Assume that the
+ software can perform matrix operations.</p>
+
+<p>
+<b>EXERCISE 4:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
+ $(X,Y)$  lies in the annulus shown below?
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/annulus.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+Express you answer in terms CDF of some standard distribution.
+</p>
+
+<p>
+<b>EXERCISE 5:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
+ $\mu\in{\mathbb R}$  and $\sigma^2&gt;0.$  Find $a&lt;b$  such that $P\left(a&lt; \frac{\bar
+ X-\mu}{S/\sqrt{n}} &lt; b\right) = 0.95$  and $b-a$  is the least possible subject to this.</p>
+
+<p>
+<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 14:</b>&nbsp;<img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 15:</b>&nbsp;<img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
