--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -158,6 +158,9 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Conditional distribution">Conditional distribution</a>
 </li>
+<li>
+<a href="#Problems for practice">Problems for practice</a>
+</li>
 </ul>
 <hr/>
 <h1><a
@@ -237,6 +240,57 @@ $$V(X|Y=y) = E((X-E(X|Y=y))^2|Y=y).$$
 </fieldset> 
 The tower property also works as before. 
 <p></p>
+
+<h1><a
+name="Problems for practice">Problems for practice</a></h1>
+::<p>
+<b>EXERCISE 1:</b>&nbsp;<img width="" src="image/hpsjoint1.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 2:</b>&nbsp;<img width="" src="image/hpsjoint2.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 3:</b>&nbsp;<img width="" src="image/hpsjoint3.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 4:</b>&nbsp;<img width="" src="image/hpsjoint4.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 5:</b>&nbsp;<img width="" src="image/hpsjoint5.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/hpsjoint6.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/hpsjoint7.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/hpsjoint8.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/hpsjoint9.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/hpsjoint10.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/rossipmjoint1.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/rossipmjoint2.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 14:</b>&nbsp;<img width="" src="image/rossipmjoint3.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 15:</b>&nbsp;<img width="" src="image/rossipmjoint4.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 16:</b>&nbsp;<img width="" src="image/rossipmjoint5.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/rossipmjoint6.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/rossipmjoint7.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/rossipmjoint8.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/rossipmjoint9.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 21:</b>&nbsp;<img width="" src="image/rossipmjoint10.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 22:</b>&nbsp;<img width="" src="image/rossipmjoint11.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 23:</b>&nbsp;<img width="" src="image/rossipmjoint12.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 24:</b>&nbsp;<img width="" src="image/rossipmjoint13.png" style="vertical-align:text-top;"></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
