--- a/prob2_2025/trans.html
+++ b/prob2_2025/trans.html
@@ -161,6 +161,9 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Quotient">Quotient</a>
 </li>
+<li>
+<a href="#Problems for practice">Problems for practice</a>
+</li>
 </ul>
 <hr/>
 <h1><a
@@ -181,6 +184,63 @@ name="Sum">Sum</a></h2>
 
 <h2><a
 name="Quotient">Quotient</a></h2>
+
+<h1><a
+name="Problems for practice">Problems for practice</a></h1>
+::<p>
+<b>EXERCISE 1:</b>&nbsp;<img width="" src="image/hpstrans1.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 2:</b>&nbsp;<img width="" src="image/hpstrans2.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 3:</b>&nbsp;<img width="" src="image/hpstrans3.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 4:</b>&nbsp;<img width="" src="image/hpstrans4.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 5:</b>&nbsp;<img width="" src="image/hpstrans5.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/hpstrans6.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/hpstrans7.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/hpstrans8.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/hpstrans9.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/hpstrans10.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/hpstrans11.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/hpstrans12.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/hpstrans13.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 14:</b>&nbsp;<img width="" src="image/hpstrans14.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 15:</b>&nbsp;<img width="" src="image/hpstrans15.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 16:</b>&nbsp;<img width="" src="image/hpstrans16.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/hpstrans17.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/hpstrans18.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/hpstrans20.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 21:</b>&nbsp;<img width="" src="image/hpstrans21.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 22:</b>&nbsp;<img width="" src="image/hpstrans22.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 23:</b>&nbsp;<img width="" src="image/hpstrans23.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 24:</b>&nbsp;<img width="" src="image/hpstrans24.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 25:</b>&nbsp;<img width="" src="image/hpstrans25.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 26:</b>&nbsp;<img width="" src="image/hpstrans26.png" style="vertical-align:text-top;"></p>
+
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
