--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -625,7 +625,9 @@ Imagine this set up: A coin with $P(H)=p$  is repeadly tossed. Success means $H.
 <p><a
 href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
 class="ans" id="lab10">
-$(1-p)^{\sum_1^r (x_i-1)} p^r.$
+$(1-p)^{x_r-r} p^r.$
+<p></p>
+Thanks to Amit Prakash Jena for correcting a mistake here.
 </div></p>
 
 <p></p>
