--- a/prob2_2025/measure.html
+++ b/prob2_2025/measure.html
@@ -181,6 +181,10 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+$
+\newcommand{\calF}{{\mathcal F}}
+\newcommand{\calB}{{\mathcal B}}
+$
 <h1><a
 name="Uncountable sample space">Uncountable sample space</a></h1>
 We have already seen last semester that for an uncountable $\Omega$  we may not always be able
@@ -194,13 +198,34 @@ Hence we defined $\sigma$-algebra. While the simplest $\sigma$-algebras are the 
 Closely related to this is the idea of a measurable function.
 <h2><a
 name="Measurable function">Measurable function</a></h2>
-
+Let $(\Omega_1,\calF_1)$  and $(\Omega_2,\calF_2)$  be measurable spaces. Then a function $f:\Omega_1\rightarrow\Omega_2$ 
+ is called <b><font color="red" size="40">measurable</font></b>  if 
+$$\forall B\in\calF_2~~f ^{-1} (B)\in \calF_1.$$
+The most common application of this our course is when $(\Omega,\calF,P)$  is a probability
+ space (<i>i.e.</i>, a random experiment) and $X:\Omega\rightarrow{\mathbb R}$  is a random variable. Here we take
+ $(\Omega_1,\calF_1) = (\Omega,\calF)$  and $(\Omega_2,\calF_2) = ({\mathbb R},\calB),$  where
+ $\calB$  is the Borel sigma-field on ${\mathbb R}.$
 <p></p>
 
+<fieldset>
+<legend><b>Definition: </b></legend>
+By a <b><font color="red" size="40">random variable</font></b>  on a probability space $(\Omega,\calF,P)$  we mean a measurable function $X$ 
+ from $(\Omega,\calF)$  to $({\mathbb R},\calB).$  Note that $P$  plays no role in the definition. 
+</fieldset> 
+We need the measurability condition on $X$  so that we can talk about $P(X\in (a,b)).$  For this we need 
+$\{w\in\Omega~:~X(w)\in (a,b)\}\equiv X ^{-1} (a,b)\in \calF.$
 <h2><a
 name="Simple funtion to approx measurable function">Simple funtion to approx measurable function</a></h2>
+While defining $E(X)$  we had proceeded in three steps: simple, non-negative and general. We took a supremum in the
+ second step. This is motivated by the following result. 
+<p></p>
+
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
 
 <p></p>
+
+</fieldset>
 
 <h2><a
 name="Lebesgue integral">Lebesgue integral</a></h2>
