--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -110,6 +110,10 @@ body,table {
   //border: 2px solid black;
   display: inline-block;
 }
+
+.hl {
+  list-style-type: upper-alpha;
+}
 </style>
 <script>
 window.onscroll = function() {myFunction()};
@@ -145,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<h3/>
 <ul>
 <li>
 <a href="#Probability II (B1, 2025)">Probability II (B1, 2025)</a>
@@ -167,7 +171,7 @@ name="Class notes">Class notes</a></h2>
 <ol type="">
 
 <li>
-<a href="contabs.html">Absolutely continuous distributions</a>
+<a href="contabs.html">Distributions with densities</a>
 </li>
 
 <li>
@@ -179,7 +183,7 @@ name="Class notes">Class notes</a></h2>
 </li>
 
 <li>
-<a href="cdistrib1.html">Some standard absolutely continuous distributions</a>
+<a href="cdistrib1.html">Some standard distributions with densities</a>
 </li>
 
 <li>
@@ -189,8 +193,6 @@ name="Class notes">Class notes</a></h2>
 <li>
 <a href="measure.html">Notions from measure theory</a>
 </li>
-
-<p></p>
 
 </ol>
 
