--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -110,6 +110,10 @@ body,table {
   //border: 2px solid black;
   display: inline-block;
 }
+
+.hl {
+  list-style-type: upper-alpha;
+}
 </style>
 <script>
 window.onscroll = function() {myFunction()};
@@ -153,23 +157,32 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Nonsignular and singular">Nonsignular and singular</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<li>&nbsp;&nbsp;&nbsp;
 <a href="#Properties">Properties</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 1">Problem set 1</a>
 </li>
 <li>
 <a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Geometry of $\k k$">Geometry of $\k k$</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#$t$  distribution">$t$  distribution</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#$F$  distribution">$F$  distribution</a>
+<a href="#Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 2">Problem set 2</a>
+</li>
+<li>
+<a href="#$t$  and $F$  distributions">$t$  and $F$  distributions</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 3">Problem set 3</a>
+</li>
+<li>
 <a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 4">Problem set 4</a>
 </li>
 <li>
 <a href="#Problems for practice">Problems for practice</a>
@@ -204,10 +217,10 @@ This involves $\v b$  directly, but $A$  only through $AA'.$  So we parametrise
 <h2><a
 name="Nonsignular and singular">Nonsignular and singular</a></h2>
 The density of $\v X$  is 
-$$(2\pi)^{-\frac n2}\exp\left(-\frac 12\v x'\v x\right)\mbox{ for }\vx\in{\mathbb R}^n.$$
+$$(2\pi)^{-\frac n2}\exp\left(-\frac 12\v x'\v x\right)\mbox{ for }\v x\in{\mathbb R}^n.$$
 If $A$  is a nonsingular matrix, then the transform $\v X\mapsto A\v X+\v b$  is a bijection. So the Jacobian formula
  gives the following density for $\v Y = A\v X+\v b$
-$$(2\pi det(AA'))^{-\frac n2}\exp\left(-\frac 12\v y'(AA') ^{-1}\v y\right)\mbox{ for }\vy\in{\mathbb R}^n.$$ 
+$$(2\pi det(AA'))^{-\frac n2}\exp\left(-\frac 12\v y'(AA') ^{-1}\v y\right)\mbox{ for }\v y\in{\mathbb R}^n.$$ 
 This is sometimes called a nonsingular multivariate normal to distinguish from the case where $A$  is singular, where
  $\v Y$  does not admit a density. 
 <p></p>
@@ -215,8 +228,8 @@ This is sometimes called a nonsingular multivariate normal to distinguish from t
 <p>
 <b>EXERCISE 1:</b>&nbsp;Describe $N_1(5,0)$  distribution.</p>
 
-<h3><a
-name="Properties">Properties</a></h3>
+<h2><a
+name="Properties">Properties</a></h2>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
@@ -259,6 +272,9 @@ First obtain the joint distribution of $(X_i,X_j)$  using the last theorem. Then
 <b><i>[QED]</i></b>
 </p>
 
+<h2><a
+name="Problem set 1">Problem set 1</a></h2>
+
 <p></p>
 Next we shall discuss some distributions related to the normal distribution.
 <h1><a
@@ -296,7 +312,7 @@ Let $X_1,....,X_m,X_{m+1}$  be IID $N(0,1).$
 <p></p>
 Then $\sum_1^{m+1} X_i^2 = \underbrace{\sum_1^m X_i^2}_Y + \underbrace{X_{m+1}^2}_Z.$
 <p></p>
-By the inducion hypothesis both $Y\sim Gamma\left(\frac m2,\frac 12\right)$  and $Z\simGamma\left(\frac 12,\frac 12\right).$ 
+By the inducion hypothesis both $Y\sim Gamma\left(\frac m2,\frac 12\right)$  and $Z\sim Gamma\left(\frac 12,\frac 12\right).$ 
 <p></p>
 Also they are independent. 
 <p></p>
@@ -304,10 +320,8 @@ So $Y+Z\sim Gamma\left(\frac{m+1}{2},\frac 12\right),$  as required.
 <b><i>[QED]</i></b>
 </p>
 
-<p></p>
-
 <h2><a
-name="Geometry of $\k k$">Geometry of $\k k$</a></h2>
+name="Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a></h2>
 If we consider a random vetor $\v X$  in ${\mathbb R}^k$  with IID $N(0,1)$  components, $\|\v X\|^2\sim \k k.$ 
  This is little more than the definition. 
 <p></p>
@@ -349,16 +363,20 @@ If $X_1,...,X_n$  are independent $N(\mu_i,1),$  then the distribution $\sum X_i
 
 </fieldset>
 
-<h3><a
-name="$t$  distribution">$t$  distribution</a></h3>
+<h2><a
+name="Problem set 2">Problem set 2</a></h2>
 
-<h3><a
-name="$F$  distribution">$F$  distribution</a></h3>
-
-<p></p>
+<h1><a
+name="$t$  and $F$  distributions">$t$  and $F$  distributions</a></h1>
 
 <h2><a
-name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h2>
+name="Problem set 3">Problem set 3</a></h2>
+
+<h1><a
+name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h1>
+
+<h2><a
+name="Problem set 4">Problem set 4</a></h2>
 
 <p></p>
 
