--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -164,6 +164,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Probability II (B1, 2025)">Probability II (B1, 2025)</a></h1>
+URL: <font size="+1" color="red"><code>https://arnabc74.github.io/prob2_2025/</code></font>
 
 <h2><a
 name="Class notes">Class notes</a></h2>
@@ -203,11 +204,11 @@ The class notes constitute the main reference. It is based on the following book
 
 <li>Ross: A First Course in Probability Theory</li>
 
-<li>Ross: Introduction to Probability Models</li>
-
 <li>Hoel, Port and Stone: Probability Theory</li>
 
-<li>Kai Lai Chung: A Course in Probability Theory</li>
+<li>Ross: Introduction to Probability Models</li>
+
+<li>Royden and Fitzpatrick: Real Analysis</li>
 
 <li>Allan Gut: Probability--A Graduate Course</li>
 
