--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -164,8 +164,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Probability II (B1, 2025)">Probability II (B1, 2025)</a></h1>
-URL: <font size="+1" color="red"><code>https://arnabc74.github.io/prob2_2025/</code></font>
-
+URL: https://arnabc74.github.io/prob2_2025/
 <h2><a
 name="Class notes">Class notes</a></h2>
 
